Added some doc and merged parse methods
I merged the two parse methods because it's easier and adjusted the doc of the methods

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 
 src/com/lorycriscuolo99/Tester.java
 build/classes/com/lorycriscuolo99/Tester.class
-*.class
+build/classes/com/lorycriscuolo99/
 *.class
